--- a/algoflex_autocomplete/package.json
+++ b/algoflex_autocomplete/package.json
@@ -16,6 +16,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development tsc-watch --onSuccess \"node ./dist/server.js --port 3010 --languageServers servers.yml\"",
     "prod": "cross-env NODE_ENV=production tsc && node ./dist/server.js --port 3010 --languageServers servers.yml",
+    "build": "tsc --build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
