--- a/algoflex_backend/package.json
+++ b/algoflex_backend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development tsc-watch --onSuccess \"node ./dist/webSocket.js\"",
     "prod": "cross-env NODE_ENV=production tsc && node ./dist/webSocket.js",
+    "build": "tsc --build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
