--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,3 +30,47 @@ jobs:
     - run: npm ci
     - run: npm run build
     - run: npm test
+    
+  build-backend:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./algoflex_backend
+    strategy:
+      matrix:
+        node-version: [12.x, 14.x, 16.x]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+    steps:
+    - uses: actions/checkout@v2
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v2
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+        cache-dependency-path: algoflex_backend/package-lock.json
+    - run: npm ci
+    - run: npm run build
+    - run: npm test
+
+
+  build-autocomplete:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./algoflex_autocomplete
+    strategy:
+      matrix:
+        node-version: [12.x, 14.x, 16.x]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+    steps:
+    - uses: actions/checkout@v2
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v2
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+        cache-dependency-path: algoflex_autocomplete/package-lock.json
+    - run: npm ci
+    - run: npm run build
+    - run: npm test
+
