--- a/algoflex_autocomplete/package.json
+++ b/algoflex_autocomplete/package.json
@@ -17,7 +17,7 @@
     "dev": "cross-env NODE_ENV=development tsc-watch --onSuccess \"node ./dist/server.js --port 3010 --languageServers servers.yml\"",
     "prod": "cross-env NODE_ENV=production tsc && node ./dist/server.js --port 3010 --languageServers servers.yml",
     "build": "tsc --build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
     "@sourcegraph/vscode-ws-jsonrpc": "0.0.3-fork",
