--- a/algoflex_backend/package.json
+++ b/algoflex_backend/package.json
@@ -7,7 +7,7 @@
     "dev": "cross-env NODE_ENV=development tsc-watch --onSuccess \"node ./dist/webSocket.js\"",
     "prod": "cross-env NODE_ENV=production tsc && node ./dist/webSocket.js",
     "build": "tsc --build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"No test specified\" && exit 0"
   },
   "author": "",
   "license": "ISC",
