--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -12,12 +12,10 @@ on:
 jobs:
   build-frontend:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./algoflex_frontend
     strategy:
       matrix:
         node-version: [12.x]
+        dir: ['./algoflex_frontend', './algoflex_backend', 'algoflex_autocomplete']
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
@@ -25,27 +23,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-        cache-dependency-path: algoflex_frontend/package-lock.json
-    - run: npm ci
-    - run: npm run build
-    - run: npm test
-    
-  build-autocomplete:
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./algoflex_autocomplete
-    strategy:
-      matrix:
-        node-version: [12.x]
-    steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-        cache-dependency-path: algoflex_autocomplete/package-lock.json
+        cache-dependency-path: ${{ matrix.dir }}/package-lock.json
     - run: npm ci
     - run: npm run build
     - run: npm test
