--- a/.github/workflows/dev.workflow.yml
+++ b/.github/workflows/dev.workflow.yml
@@ -24,9 +24,10 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
         cache-dependency-path: ${{ matrix.dir }}/package-lock.json
-    - run: npm ci
-    - run: npm run build
-    - run: npm test
+    - run: | 
+          npm ci
+          npm run build
+          npm test
     
   sonarcloud:
     runs-on: ubuntu-latest
